--- a/config/CustomSpawner/overworld/Creatures/BOBMOWZIE.cfg
+++ b/config/CustomSpawner/overworld/Creatures/BOBMOWZIE.cfg
@@ -238,17 +238,17 @@ lantern {
 naga {
     S:biomegroups <NAGA_DEFAULT>
     B:canSpawn=true
-    I:frequency=12
+    I:frequency=9
     I:maxChunk=4
     I:maxLightlevel=-1
-    I:maxSpawn=3
+    I:maxSpawn=2
     I:maxSpawnHeight=256
     I:minLightlevel=-1
     I:minSpawn=1
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
