--- a/config/CustomSpawner/overworld/Creatures/MoCreatures.cfg
+++ b/config/CustomSpawner/overworld/Creatures/MoCreatures.cfg
@@ -195,7 +195,7 @@ blackbear {
 
 boar {
     S:biomegroups <BOAR_DEFAULT>
-    B:canSpawn=true
+    B:canSpawn=false
     I:frequency=8
     I:maxChunk=4
     I:maxLightlevel=-1
@@ -1455,7 +1455,7 @@ scorpion {
 
 shark {
     S:biomegroups <SHARK_DEFAULT>
-    B:canSpawn=true
+    B:canSpawn=false
     I:frequency=6
     I:maxChunk=4
     I:maxLightlevel=-1
@@ -1644,7 +1644,7 @@ werewolf {
 
 wildhorse {
     S:biomegroups <WILDHORSE_DEFAULT>
-    B:canSpawn=true
+    B:canSpawn=false
     I:frequency=8
     I:maxChunk=4
     I:maxLightlevel=-1
