--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -497,6 +497,7 @@ entity {
         Arthur
         Aaron
         Allison
+        Alex
         Alexander
         Arielle
         Amanda
@@ -522,6 +523,7 @@ entity {
         Carl
         Calvin
         Cameron
+        Captain Alex
         Carson
         Chase
         Cassandra
@@ -576,6 +578,7 @@ entity {
         Fredward
         Frank
         Franklin
+        Francis
         Felix
         Felicia
         Fran
@@ -613,7 +616,9 @@ entity {
         Joe
         Jon
         Johnson
+        John
         Johnny
+        Juan
         Juan Carlos
         Jonathan
         Josh
@@ -776,6 +781,7 @@ entity {
         Tabitha
         Tessa
         Tiara
+        Tony Sama
         Tyra
         Uriel
         Ursala
@@ -830,6 +836,7 @@ entity {
         Mechanical
         Longitudinal
         Wide
+        Lil
      >
 
     # A list of suffixes, which are used in the generation of boss names. A suffix is always preceeded by "The". May be empty. [default: [Mighty], [Supreme], [Superior], [Ultimate], [Lame], [Wimpy], [Curious], [Sneaky], [Pathetic], [Crying], [Eagle], [Errant], [Unholy], [Questionable], [Mean], [Hungry], [Thirsty], [Feeble], [Wise], [Sage], [Magical], [Mythical], [Legendary], [Not Very Nice], [Jerk], [Doctor], [Misunderstood], [Angry], [Knight], [Bishop], [Godly], [Special], [Toasty], [Shiny], [Shimmering], [Light], [Dark], [Odd-Smelling], [Funky], [Rock Smasher], [Son of Herobrine], [Cracked], [Sticky], [§kAlien§r], [Baby], [Manly], [Rough], [Scary], [Undoubtable], [Honest], [Non-Suspicious], [Boring], [Odd], [Lazy], [Super], [Nifty], [Ogre Slayer], [Pig Thief], [Dirt Digger], [Really Cool], [Doominator], [... Something]]
@@ -843,12 +850,9 @@ entity {
         Curious
         Sneaky
         Pathetic
-        Crying
-        Eagle
         Errant
         Unholy
         Questionable
-        Mean
         Hungry
         Thirsty
         Feeble
@@ -860,7 +864,6 @@ entity {
         Not Very Nice
         Jerk
         Doctor
-        Misunderstood
         Angry
         Knight
         Bishop
@@ -873,7 +876,6 @@ entity {
         Dark
         Odd-Smelling
         Funky
-        Rock Smasher
         Son of Herobrine
         Cracked
         Sticky
@@ -901,6 +903,7 @@ entity {
         Bi*ch
         Nigerian
         American
+        Ugandan
         Indian
         Chungus
         Depressed
@@ -908,6 +911,19 @@ entity {
         Crackhead
         Scammer
         69th
+        Banch
+        Banchod
+        Choder
+        Bitchass
+        Coomer
+        Nogger
+        Cyka Blyat
+        Chinese
+        Taiwanese
+        Sri Lankan
+        Asian
+        Round
+        Inconspicuous
         ... Something
      >
 }
@@ -925,6 +941,7 @@ items {
         Close Helm
         Barbute
         Ushanka
+        Bucket
      >
 
     # A list of root names for axes, used in the generation of item names. May not be empty. [default: [Axe], [Chopper], [Hatchet], [Tomahawk], [Cleaver], [Hacker], [Tree-Cutter], [Truncator]]
