--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -424,6 +424,7 @@ entitybasehealth {
     D:Zombie=20
     D:ZombieVillager=20.0
     D:archer=20.0
+    D:barako=1416.720703125
     D:barakoan_barakoana=20.842906951904297
     D:barakoaya=26.536590576171875
     D:betteranimalsplus.badger=12.0
@@ -432,6 +433,7 @@ entitybasehealth {
     D:betteranimalsplus.brownbear=30.0
     D:betteranimalsplus.hirschgeist=150.0
     D:betteranimalsplus.zotzpyre=20.0
+    D:bossskeleton=73.86006164550781
     D:bosszombie=111.60102081298828
     D:bound_soul=31.020423889160156
     D:"charm:spectre"=0.5
@@ -444,6 +446,7 @@ entitybasehealth {
     D:dread_thrall=180.33206176757812
     D:"ebwizardry:evil_wizard"=30.0
     D:ferrous_wroughtnaut=60.74569320678711
+    D:foliaath=32.432735443115234
     D:frostmaw=759.5997924804688
     D:geist=12.0
     D:ghoul=16.0
@@ -483,6 +486,7 @@ entitybasehealth {
     D:trumpetskeleton.TrumpetSkeleton=20.0
     D:twilightforest.hydra=360.0
     D:twilightforest.minoshroom=6000.0
+    D:vespid=4.0
     D:wasp=10.0
     D:wendigo=44.0
 }
