--- a/config/lycanitesmobs/general.cfg
+++ b/config/lycanitesmobs/general.cfg
@@ -151,6 +151,7 @@ debug {
     B:Packets=false
     B:Projectile=false
     B:Subspecies=false
+    B:overlay=false
 }
 
 
@@ -320,7 +321,6 @@ effects {
 ##########################################################################################################
 
 extras {
-    # Set to true to prevent players from dismounting from Lycanites Mobs mounts when pressing shift (useful for shift to fly/swim down).
     B:"Disable Sneak Dismount"=true
 
     # Donation Familiars help support the development of this mod but can be turned of for individual players be adding their username to this list.
@@ -386,7 +386,7 @@ gui {
     B:"Disable Pickup Offset"=false
 
     # The level of a mob created via fusion is multiplied by this value, set to 1 for no changes. Tamed fusions aren't multiplied by this value.
-    B:"Elemental Fusion"=1
+    B:"Elemental Fusion"=1.0
 
     # If true, all mobs will be immune to damage from running out of air (drown damage).
     B:"Global Drown Immunity"=false
