--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -266,6 +266,7 @@ general {
         twilightforest:twilight_sapling:7:*=reskillable:farming|18
         twilightforest:twilight_sapling:8:*=reskillable:farming|18
         twilightforest:twilight_sapling:9:*=reskillable:farming|18
+        twilightforest:triple_bow:*=reskillable:magic|69420
         
         defiledlands:blastem_seed:*=reskillable:farming|8
         minecraft:chainmail_helmet:*=reskillable:defense|3,reskillable:agility|6
