--- a/config/spawnercontrol/spawnercontrol.cfg
+++ b/config/spawnercontrol/spawnercontrol.cfg
@@ -103,14 +103,14 @@ general {
 
         spawnconditions {
             # If forceSpawnerMobSpawns is enabled, will prevent hostile mobs from spawning in daylight
-            B:checkSunlight=true
+            B:checkSunlight=false
 
             # If set to true, spawners will not run mob-specific checks on any entity
             B:forceSpawnerAllSpawns=false
 
             # If set to true, spawners will not run mob-specific checks on hostile mob entities
             # This most notably prevents players from disabling a spawner with torches or other light sources
-            B:forceSpawnerMobSpawns=false
+            B:forceSpawnerMobSpawns=true
         }
 
         ##########################################################################################################
@@ -159,7 +159,7 @@ general {
                  >
 
                 # xp drop multiplier for mobs spawned by this spawner type
-                D:xpMultiplier=1.0
+                D:xpMultiplier=1.2
             }
 
         }
