--- a/config/betteranimalsplus.cfg
+++ b/config/betteranimalsplus.cfg
@@ -1217,7 +1217,7 @@ its_meow {
                     B:allowDespawning=false
 
                     # Disables natural spawning [default: true]
-                    B:doSpawning=true
+                    B:doSpawning=false
 
                     # Must be greater or equal to min value! [range: 1 ~ 9999, default: 3]
                     I:maxGroup=3
