--- a/config/toughasnails/gameplay.cfg
+++ b/config/toughasnails/gameplay.cfg
@@ -5,7 +5,7 @@
     B:"Enable Body Temperature"=true
 
     # The effects of the mod will work on Peaceful difficulty. [default: false]
-    B:"Enable Peaceful"=false
+    B:"Enable Peaceful"=true
 
     # Players are affected by thirst. [default: true]
     B:"Enable Thirst"=true
