fix t2 gen, remove player revive

--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -61,7 +61,7 @@ batswarm {
     I:BatSwarm_BatAttackRange=20
 
     # The number of bats that attack when a boss fires his Bat Swarm ability. [range: 0 ~ 32767, default: 3]
-    I:BatSwarm_BatCount=3
+    I:BatSwarm_BatCount=0
 
     # The cooldown (in seconds) before the boss can fire Bat Swarm again. [range: 0 ~ 32767, default: 3]
     I:BatSwarm_CoolDown=10
@@ -76,7 +76,7 @@ batswarm {
     I:BatSwarm_UseRange=20
 
     # Disable this if you don't want bosses to use Bat Swarm attacks. [default: true]
-    B:_BatSwarm_Enabled=true
+    B:_BatSwarm_Enabled=false
 }
 
 
@@ -160,10 +160,10 @@ bossfog {
     B:BossFog_PlayerCough=true
 
     # If enabled, boss fog will cause poison damage over time. [default: true]
-    B:_BossFog_DoTEnabled=true
+    B:_BossFog_DoTEnabled=false
 
     # Enable this to have thick colored fog around bosses. [default: true]
-    B:_BossFog_Enabled=true
+    B:_BossFog_Enabled=false
 }
 
 
@@ -539,7 +539,6 @@ skeletonbossequipment {
         feather_falling;3
         respiration;3
         depth_strider;3
-        thorns;2
         projectile_protection;2
         fire_protection;2
         blast_protection;2
@@ -628,7 +627,6 @@ skeletonequipment {
         feather_falling;3
         respiration;3
         depth_strider;3
-        thorns;2
         projectile_protection;2
         fire_protection;2
         blast_protection;2
@@ -748,7 +746,7 @@ spawnconditions {
     I:SpawnConditions_MinDistanceFromSpawn=0
 
     # Player's Minecraft Experience Level required before a Rough Mob will spawn. [range: 0 ~ 32767, default: 0]
-    I:SpawnConditions_MinPlayerLevel=0
+    I:SpawnConditions_MinPlayerLevel=2
 
     # Enable this to require Rough Mobs be underground in order to spawn. [default: false]
     B:SpawnConditions_MustBeUnderground=false
@@ -1029,7 +1027,7 @@ zombie {
     S:zombieLeapHeight=0.2
 
     # Chance (1 in X) for a newly spawned zombie to become a boss zombie [range: 0 ~ 32767, default: 200]
-    I:zombie_BossChance=200
+    I:zombie_BossChance=400
 
     # zombie boss names. Please be more creative than I am... :P [default: [Zombie King], [Flesh King], [Dr. Zomboss], [Azog], [Zon-Goku], [Amy], [Z0mb3y]]
     S:zombie_BossNames <
@@ -1052,7 +1050,7 @@ zombie {
 
 "zombie pigman" {
     # Set to false to disable ALL zombie pigman features [default: true]
-    B:"_zombie pigmanFeaturesEnabled"=true
+    B:"_zombie pigmanFeaturesEnabled"=false
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
     I:"zombie pigmanAggressionRange"=10
@@ -1067,7 +1065,7 @@ zombie {
     B:"zombie pigmanAggressiveTouch"=false
 
     # Set to true for zombie pigmen to always be aggressive [default: true]
-    B:"zombie pigmanAlwaysAggressive"=true
+    B:"zombie pigmanAlwaysAggressive"=false
 
     # Entities which count as zombie pigman entities [default: [minecraft:zombie_pigman]]
     S:"zombie pigmanEntities" <
@@ -1100,7 +1098,6 @@ zombiebossequipment {
         feather_falling;3
         respiration;3
         depth_strider;3
-        thorns;2
         projectile_protection;2
         fire_protection;2
         blast_protection;2
@@ -1189,7 +1186,6 @@ zombieequipment {
         feather_falling;3
         respiration;3
         depth_strider;3
-        thorns;2
         projectile_protection;2
         fire_protection;2
         blast_protection;2
