new recipes, updated changelog

--- a/config/CustomSpawner/end/Creatures/Vanilla.cfg
+++ b/config/CustomSpawner/end/Creatures/Vanilla.cfg
@@ -972,7 +972,7 @@ wolf {
 
 zombie {
     S:biomegroups <ZOMBIE_DEFAULT>
-    B:canSpawn=true
+    B:canSpawn=false
     I:frequency=95
     I:maxChunk=4
     I:maxLightlevel=-1
@@ -993,7 +993,7 @@ zombie {
 
 zombiehorse {
     S:biomegroups <ZOMBIEHORSE_DEFAULT>
-    B:canSpawn=true
+    B:canSpawn=false
     I:frequency=8
     I:maxChunk=6
     I:maxLightlevel=-1
@@ -1014,7 +1014,7 @@ zombiehorse {
 
 zombievillager {
     S:biomegroups <ZOMBIEVILLAGER_DEFAULT>
-    B:canSpawn=true
+    B:canSpawn=false
     I:frequency=5
     I:maxChunk=4
     I:maxLightlevel=-1
