--- a/config/globalgamerules.cfg
+++ b/config/globalgamerules.cfg
@@ -23,7 +23,7 @@ gamerules {
     S:disableElytraMovementCheck=true
 
     # Whether the day-night cycle and moon phases progress
-    S:doDaylightCycle=true
+    S:doDaylightCycle=false
 
     # Whether entities that are not mobs should have drops
     S:doEntityDrops=true
