--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -394,7 +394,7 @@ all {
     I:"Stymphalian Bird Target Search Length"=64
 
     # True if stymphalian birds are allowed to target and attack animals [default: false]
-    B:"Stymphalian Birds Target Animals"=false
+    B:"Stymphalian Birds Target Animals"=true
 
     # True if stymphalian birds can drop items registered in the ore dictionary to ingotCopper, ingotBronze, nuggetCopper, nuggetBronze. [default: true]
     B:"Stymphalian Birds drop ore dict items"=true
