--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -276,6 +276,7 @@ entitiesalwaysinfernal {
     B:twilightforest.minoshroom=false
     B:twilightforest.naga=false
     B:twilightforest.skeleton_druid=false
+    B:twilightforest.snow_guardian=false
     B:twilightforest.snow_queen=false
     B:twilightforest.ur_ghast=false
     B:twilightforest.yeti=false
@@ -441,6 +442,7 @@ entitybasehealth {
     D:bosszombie=111.60102081298828
     D:bound_soul=31.020423889160156
     D:"charm:spectre"=0.5
+    D:cryptkeeper=20.0
     D:cyclops=813.7178344726562
     D:defiledlands.host=37.345802307128906
     D:defiledlands.shambler=40.0
@@ -818,6 +820,7 @@ permittedentities {
     B:twilightforest.minoshroom=true
     B:twilightforest.naga=true
     B:twilightforest.skeleton_druid=true
+    B:twilightforest.snow_guardian=true
     B:twilightforest.snow_queen=true
     B:twilightforest.ur_ghast=true
     B:twilightforest.yeti=true
