--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1632,12 +1632,12 @@ world {
 
     stonelings {
         # Do stonelings get spooked when players move suddenly near them?
-        B:"Cautious Stonelings"=true
+        B:"Cautious Stonelings"=false
         B:"Enable Diamond Heart"=true
         I:"Max Y Level"=24
 
         # Higher = more stonelings
-        I:"Spawning Weight"=80
+        I:"Spawning Weight"=200
 
         # Can stonelings be tamed by feeding them diamonds?
         B:"Tamable Stonelings"=true
@@ -1778,7 +1778,7 @@ world {
         B:useCaves=true
         B:useDungeons=true
         B:useLavaLakes=true
-        B:useLavaOceans=false
+        B:useLavaOceans=true
         B:useMineShafts=true
         B:useMonuments=true
         B:useRavines=true
@@ -1852,12 +1852,13 @@ world {
 
     "broken nether portals" {
         # The chance a broken portal will try to spawn per chunk (1 is 100%, 0 is 0%)
-        D:"Spawn Chance"=0.02
+        D:"Spawn Chance"=0.03
 
         dimensions {
             #  [default: [-1]]
             S:Dimensions <
                 -1
+                0
              >
 
             #  [default: false]
@@ -1899,15 +1900,15 @@ world {
 
     "depth mobs" {
         # (Skeleton is 100. The higher, the more will spawn)
-        I:"Ashen Spawn Weight"=30
+        I:"Ashen Spawn Weight"=100
 
         # (Zombie is 100. The higher, the more will spawn)
-        I:"Dweller Spawn Weight"=30
+        I:"Dweller Spawn Weight"=100
         B:"Enable Ashen"=true
         B:"Enable Dweller"=true
-        I:"Highest Y level for spawns"=20
+        I:"Highest Y level for spawns"=30
         I:"Largest Ashen spawn group"=2
-        I:"Largest Dweller spawn group"=2
+        I:"Largest Dweller spawn group"=3
         I:"Smallest Ashen spawn group"=1
         I:"Smallest Dweller spawn group"=1
     }
