spawn cap changes

--- a/config/CustomSpawner/overworld/Creatures/LYCANITESMOBS.cfg
+++ b/config/CustomSpawner/overworld/Creatures/LYCANITESMOBS.cfg
@@ -1109,7 +1109,7 @@ ignibus {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=AMBIENT
+    S:type=MONSTER
 }
 
 
