--- a/config/roughmobsrevamped.cfg
+++ b/config/roughmobsrevamped.cfg
@@ -1024,6 +1024,8 @@ zombie {
         Zon-Goku
         Amy
         Z0mb3y
+        Dio
+        Jotaro
         The Lord of Morbing
      >
 }
@@ -1037,7 +1039,7 @@ zombie {
 
 "zombie pigman" {
     # Set to false to disable ALL zombie pigman features [default: true]
-    B:"_zombie pigmanFeaturesEnabled"=false
+    B:"_zombie pigmanFeaturesEnabled"=true
 
     # The range at which zombie pigmen will be aggressive to the player. [range: 0 ~ 32767, default: 10]
     I:"zombie pigmanAggressionRange"=10
