wizardry balances, nerfed gold, nerfed battleaxe,  buffed boomerang

--- a/config/antiqueatlas/biome_textures.json
+++ b/config/antiqueatlas/biome_textures.json
@@ -2,7 +2,7 @@
   "version": 2,
   "data": {
     "biomesoplenty:alps": "MOUNTAINS_NAKED",
-    "biomesoplenty:alps_foothills": "SNOW_PINES_HILLS",
+    "biomesoplenty:alps_foothills": "SNOW_PINES",
     "biomesoplenty:bamboo_forest": "BOP_BAMBOO",
     "biomesoplenty:bayou": "BOP_BAYOU",
     "biomesoplenty:bog": "BOP_BOG",
