--- a/config/ichunutil.cfg
+++ b/config/ichunutil.cfg
@@ -43,7 +43,7 @@ module {
         general {
             # String to say that you've acknowledged the EULA
             # If this config is for a server, set it to true.
-            S:eulaAcknowledged=Loafed
+            S:eulaAcknowledged=Supa_Biker
         }
 
     }
@@ -70,7 +70,7 @@ module {
             I:versionNotificationTypes=0
 
             # Don't change this.
-            I:versionSave=6
+            I:versionSave=8
         }
 
     }
